@@ -47,12 +47,19 @@ void Balloon::Update()
             {
                 frame = 0;
             }
+
+            if (Collides())
+            {
+                Pop(false);
+                return;
+            }
+
             MoveTo({ x, y, z + 1 });
 
             int32_t maxZ = 1967 - ((x ^ y) & 31);
             if (z >= maxZ)
             {
-                Pop();
+                Pop(true);
             }
         }
     }
@@ -67,7 +74,7 @@ void Balloon::Press()
         uint32_t random = ScenarioRand();
         if ((Id.ToUnderlying() & 7) || (random & 0xFFFF) < 0x2000)
         {
-            Pop();
+            Pop(true);
         }
         else
         {
@@ -77,11 +84,14 @@ void Balloon::Press()
     }
 }
 
-void Balloon::Pop()
+void Balloon::Pop(bool playSound)
 {
     popped = 1;
     frame = 0;
-    OpenRCT2::Audio::Play3D(OpenRCT2::Audio::SoundId::BalloonPop, { x, y, z });
+    if (playSound)
+    {
+        OpenRCT2::Audio::Play3D(OpenRCT2::Audio::SoundId::BalloonPop, { x, y, z });
+    }
 }
 
 void Balloon::Create(const CoordsXYZ& balloonPos, int32_t colour, bool isPopped)
@@ -121,4 +131,50 @@ void Balloon::Paint(PaintSession& session, int32_t imageDirection) const
 
     auto image = ImageId(imageId, colour);
     PaintAddImageAsParent(session, image, { 0, 0, z }, { 1, 1, 0 });
+}
+
+bool Balloon::Collides() const
+{
+    const TileElement* tileElement = MapGetFirstElementAt(CoordsXY({ x, y }));
+    if (tileElement == nullptr)
+        return false;
+    do
+    {
+        // the balloon has height so we add some padding to prevent it clipping through things.
+        int32_t balloon_top = z + COORDS_Z_STEP * 2;
+        if (balloon_top == tileElement->GetBaseZ())
+        {
+            return true;
+        }
+
+        // check for situations where guests can drop a balloon inside a covered building
+        bool check_ceiling = tileElement->GetType() == TileElementType::Entrance;
+        if (tileElement->GetType() == TileElementType::Track)
+        {
+            const TrackElement* trackElement = tileElement->AsTrack();
+            if (trackElement->GetRideType() == RIDE_TYPE_DODGEMS)
+            {
+                check_ceiling = true;
+            }
+            else
+            {
+                // all station platforms besides the plain and invisible ones are covered
+                auto style = GetRide(trackElement->GetRideIndex())->GetEntranceStyle();
+                if (style != RCT12_STATION_STYLE_PLAIN && style != RCT12_STATION_STYLE_INVISIBLE)
+                {
+                    check_ceiling = true;
+                }
+            }
+        }
+
+        if (check_ceiling)
+        {
+            if (balloon_top > tileElement->GetBaseZ() && z < tileElement->GetClearanceZ())
+            {
+                return true;
+            }
+        }
+
+    } while (!(tileElement++)->IsLastForTile());
+    return false;
 }
